--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=7e05bef9393329ce36decdf7acbee3b7
 ###< symfony/framework-bundle ###
 
@@ -34,11 +34,11 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/thebookprestige?serverVersion=8.0.32&
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+#MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://4fad9a09f311e8:36723e0d686fd1@sandbox.smtp.mailtrap.io:2525
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/mailer ###
 
 ###> karser/karser-recaptcha3-bundle ###
